# logger

./: .gitignore  build.sh  composer.json
client/: UisLogClient.php
client/protocol/: proto.php
config/: config_prod.ini  config_sit.ini  config_uat.ini
protocol/: server.xml  tail.xml
server/: CMakeLists.txt  Makefile  action.c  action.h  cmake_install.cmake  common.h  config.ini  log.c  log.h  logger.c  logger.h  map.c  map.h  server  server.c  server.h  uis_log_server  work.c  work.h
server/protocol/: def.h  proto.c  proto.h  proto_action_dispatch.c  proto_action_dispatch.h
server/yile/: yile.h
server/yile/yile_buf/include/: yile_buf.h
server/yile/yile_ini/include/: yile_ini.h
server/yile/yile_log/include/: yile_log.h
server/yile/yile_net/include/: yile_connection.h  yile_epoll.h  yile_event.h  yile_net.h  yile_net_base.h
server/yile/yile_process/include/: yile_process.h
server/yile/yile_protocol/include/: yile_protocol.h
test/: test.php
